syntax = "proto2";

package proto.domjudge;
option java_package = "me.hex539.proto.domjudge";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  // Indicates a field name that overrides the default for serialization
  optional string serialized_name = 92066888;
}

extend google.protobuf.EnumValueOptions {
  // Indicates a field value that overrides the default for serialization
  optional string serialized_value = 92066888;
}
